tests/ui/parser/keyword-box-as-identifier.stderr
error: expected pattern, found `=`
  --> $DIR/keyword-box-as-identifier.rs:2:13
   |
LL |     let box = 0;
   |             ^
   |
note: `box` is a reserved keyword
  --> $DIR/keyword-box-as-identifier.rs:2:9
   |
LL |     let box = 0;
   |         ^^^
help: escape `box` to use it as an identifier
   |
LL |     let r#box = 0;
   |         ++

error: expected pattern, found `:`
  --> $DIR/keyword-box-as-identifier.rs:4:12
   |
LL |     let box: bool;
   |            ^
   |
note: `box` is a reserved keyword
  --> $DIR/keyword-box-as-identifier.rs:4:9
   |
LL |     let box: bool;
   |         ^^^
help: escape `box` to use it as an identifier
   |
LL |     let r#box: bool;
   |         ++

error: expected pattern, found `=`
  --> $DIR/keyword-box-as-identifier.rs:6:17
   |
LL |     let mut box = 0;
   |                 ^
   |
note: `box` is a reserved keyword
  --> $DIR/keyword-box-as-identifier.rs:6:13
   |
LL |     let mut box = 0;
   |             ^^^
help: escape `box` to use it as an identifier
   |
LL |     let mut r#box = 0;
   |             ++

error: expected pattern, found `,`
  --> $DIR/keyword-box-as-identifier.rs:8:13
   |
LL |     let (box,) = (0,);
   |             ^
   |
note: `box` is a reserved keyword
  --> $DIR/keyword-box-as-identifier.rs:8:10
   |
LL |     let (box,) = (0,);
   |          ^^^
help: escape `box` to use it as an identifier
   |
LL |     let (r#box,) = (0,);
   |          ++

error: aborting due to 4 previous errors

